tests/miz/pass/types/pass_type_elaboration_local_mode_reserved_variable_type_assertion_001.miz
definition
  mode LocalModeTypeAssertionDef: LocalModeTypeAssertion is set;
end;

reserve x for LocalModeTypeAssertion;
theorem LocalModeReservedVariableTypeAssertionPayloadBoundary: x is set;
