tests/miz/fail/types/fail_type_elaboration_attributed_local_mode_chain_evidence_gap_001.miz
definition
  let x be set;
  attr MarkedChainAttrDef: x is marked means thesis;
end;

definition
  mode BaseChainModeDef: BaseChainMode is set;
end;

definition
  mode AttributedChainModeDef: AttributedChainMode is BaseChainMode;
end;

reserve z for marked AttributedChainMode;
